deploy/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meshr
  labels:
    app.kubernetes.io/part-of: meshr
    meshr.social/environment: production
